# beamup

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  artifacts.json  beamup-installer.ps1.txt  beamup-installer.sh.txt  changelog.rss  cliff.toml  index.html  oranda.json
.github/workflows/: compile.yml  release.yml  shelltests.yml  web.yml  windows-compile.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
changelog/v0.10.0/: index.html
changelog/v0.2.0/: index.html
changelog/v0.3.0/: index.html
changelog/v0.4.0/: index.html
changelog/v0.4.1/: index.html
changelog/v0.4.2/: index.html
changelog/v0.4.3/: index.html
changelog/v0.4.4/: index.html
changelog/v0.4.5/: index.html
changelog/v0.4.6/: index.html
changelog/v0.4.7/: index.html
changelog/v0.5.0/: index.html
changelog/v0.6.0/: index.html
changelog/v0.7.0/: index.html
changelog/v0.7.1/: index.html
changelog/v0.7.2/: index.html
changelog/v0.8.0/: index.html
changelog/v0.9.0/: index.html
shelltests/: installs.test  langauges_components.test  languages_components.test
shelltests/macos/: install_erlang.test
src/: cmd.rs  components.rs  config.rs  git.rs  github.rs  install.rs  languages.rs  links.rs  main.rs  run.rs  utils.rs
src/cmd/: build.rs  component_install.rs  default.rs  install.rs  list.rs  releases.rs  switch.rs  update_links.rs
src/components/: elp.rs  erlang_ls.rs  rebar3.rs
src/languages/: elixir.rs  erlang.rs  gleam.rs
wix/: main.wxs
