[package]
name = "beamup"
version = "0.3.0"
description = " Install and control active BEAM languages and components"
edition = "2021"
authors = ["Tristan Sloughter <tristan@sloughter.dev>"]
repository = "https://github.com/tsloughter/beamup"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tsloughter/beamup"

[package.metadata.wix]
upgrade-guid = "67FB3E2E-2204-4262-B187-C940B9E293E1"
path-guid = "7600FDEA-F157-41B8-A433-A81FC6A057DF"
license = false
eula = false

[dependencies]
clap = {version = "4.5.8", features = ["derive", "color"]}
clap_complete = "4.5.7"
log = "0.4.21"
env_logger = "0.11.3"
tempdir = "0.3.4"
tar = "0.4.5"
glob = "0.3.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
indicatif = { version = "0.17.8", features = ["futures", "tokio", "improved_unicode"] }
console = "0.15.8"
num_cpus = "1.8.0"
shell-words = "1.0.0"
octocrab = "0.38.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
bytes = { version = "1.6.1", features = [] }
flate2 = "1.0.30"
color-eyre = "0.6.2"
http = "1.1.0"
ureq = "2.10.0"
windows-sys = { version = "0.59.0", features = ["Win32_System", "Win32_System_Console"] }
zip = "2.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
